--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "type": "module",
   "devDependencies": {
     "@nomicfoundation/hardhat-ignition": "^3.0.3",
+    "@nomicfoundation/hardhat-ignition-ethers": "^3.0.3",
     "@nomicfoundation/hardhat-toolbox-viem": "^5.0.0",
     "@types/node": "^22.18.12",
     "forge-std": "github:foundry-rs/forge-std#v1.9.4",
