correzione italiano cap3

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -19,6 +19,9 @@
         "SAMEORIGIN",
         "spoofato",
         "sull’autenticità",
-        "WASC"
+        "WASC",
+        "bayesiana",
+        "Sommerville",
+        "Saltzer",
     ]
 }
