--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -23,5 +23,10 @@
         "bayesiana",
         "Sommerville",
         "Saltzer",
+        "Supabase",
+        "Containerizzazione",
+        "validatori",
+        "containerizzare",
+        "Besu",
     ]
 }
