fix tab stride definitiva

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,34 +1,39 @@
 {
     "cSpell.words": [
+        "bayesiana",
         "bayesiano",
+        "Besu",
         "CAPEC",
         "clickjacked",
         "Clickjacking",
         "Cockrell",
+        "containerizzare",
+        "Containerizzazione",
         "dall'attaccante",
+        "dall’attaccante",
         "dall'host",
         "dall'utente",
+        "dall’utente",
         "Deployare",
         "disconnetti",
         "hspace",
         "l'esfiltrazione",
         "loggato",
         "Postconditions",
+        "QBFT",
         "Redirector",
         "ricentrarlo",
+        "runserver",
+        "Saltzer",
         "SAMEORIGIN",
+        "Sommerville",
         "spoofato",
         "sull'autenticità",
-        "WASC",
-        "bayesiana",
-        "Sommerville",
-        "Saltzer",
+        "sull’autenticità",
         "Supabase",
-        "Containerizzazione",
         "validatori",
-        "containerizzare",
-        "Besu",
-        "QBFT"
+        "venv",
+        "WASC"
     ],
     "cSpell.language": "en,it",
     "cSpell.ignorePaths": [
