Fix scrittura capitolo 3

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -17,6 +17,7 @@
         "Deployare",
         "disconnetti",
         "hspace",
+        "IBFT",
         "l'esfiltrazione",
         "loggato",
         "Postconditions",
