Aggiornata foto catena di markov ed iniziato capitolo 4

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -22,6 +22,7 @@
         "loggato",
         "Postconditions",
         "QBFT",
+        "Qube",
         "Redirector",
         "ricentrarlo",
         "runserver",
