aggiunto pacchetto per listato da terminale, messo il package nei file nascosti a spell checker e aggiunti testi nel chapter5

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -46,7 +46,8 @@
         "QBFT-Network",
         "scripts",
         ".git",
-        ".gitignore"
+        ".gitignore",
+        "Latex/packages.sty"
     ],
     "[latex]": {
         "cSpell.enabled": true
