Iniziata parte sul codice prism, inserito pacchetto per la formattazione del codice (da migliorare i colori)

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -16,6 +16,7 @@
         "dall’utente",
         "Deployare",
         "disconnetti",
+        "DTMC",
         "hspace",
         "IBFT",
         "l'esfiltrazione",
