Iniziato capitolo sulla verifica di una proprietà di safety

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -26,6 +26,7 @@
         "Qube",
         "Redirector",
         "ricentrarlo",
+        "rpass",
         "runserver",
         "Saltzer",
         "SAMEORIGIN",
