Fix dizionario spelling

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -19,13 +19,20 @@
         "DTMC",
         "hspace",
         "IBFT",
+        "inserimentocodice",
+        "inserimentodati",
+        "inserimentoemail",
+        "inserimentonuovapassword",
         "l'esfiltrazione",
         "loggato",
+        "nuovapassword",
         "Postconditions",
         "QBFT",
         "Qube",
         "Redirector",
         "ricentrarlo",
+        "rinviocodicemfa",
+        "rinviocodicepass",
         "rpass",
         "runserver",
         "Saltzer",
