--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -11,6 +11,7 @@ ckzg==2.1.5
 cytoolz==1.1.0
 dj-database-url==3.0.1
 Django==6.0
+django-otp==1.6.3
 djangorestframework==3.16.1
 eth-account==0.13.7
 eth-hash==0.7.1
@@ -25,6 +26,7 @@ hexbytes==1.3.1
 idna==3.11
 multidict==6.7.0
 parsimonious==0.10.0
+pillow==12.0.0
 propcache==0.4.1
 psycopg2-binary==2.9.11
 pycryptodome==3.23.0
@@ -32,6 +34,7 @@ pydantic==2.12.5
 pydantic_core==2.41.5
 python-dotenv==1.2.1
 pyunormalize==17.0.0
+qrcode==8.2
 regex==2025.11.3
 requests==2.32.5
 rlp==4.1.0
