--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "dependencies": {
     "@openzeppelin/contracts": "^5.4.0",
     "dotenv": "^17.2.3",
-    "hardhat": "^3.1.0"
+    "hardhat": "^3.1.0",
+    "web3": "^4.16.0"
   },
   "type": "module",
   "devDependencies": {
