--- a/.gitignore
+++ b/.gitignore
@@ -108,10 +108,7 @@ Latex/chapter4/chapter4.aux
 Latex/chapter5/chapter5.aux
 Latex/frontmatter/frontispiece.aux
 package-lock.json
-ignition/deployments/chain-1338/deployed_addresses.json
-ignition/deployments/chain-1338/journal.jsonl
-ignition/deployments/chain-1338/artifacts/ParityCheckerModule#ParityChecker.json
-ignition/deployments/chain-1338/build-info/solc-0_8_19-aea2f5d9b41ab22f9a42ec6abc0fd12b581c32f4.json
+ignition/deployments/chain-1338/*
 package-lock.json
 Latex/.DS_Store
 
@@ -123,7 +120,3 @@ __pycache__/
 *.pyc
 .env
 app/Ledger_Logistic/Blockchain/Spedizione/dati_spedizioni.json
-
-./ignition/deployments/
-ignition/deployments/chain-1338/Spedizione_abi.json
-ignition/deployments/chain-1338/Spedizione_address.json
