--- a/.gitignore
+++ b/.gitignore
@@ -108,7 +108,7 @@ Latex/chapter4/chapter4.aux
 Latex/chapter5/chapter5.aux
 Latex/frontmatter/frontispiece.aux
 package-lock.json
-ignition/deployments/chain-1338/*
+ignition/*
 package-lock.json
 Latex/.DS_Store
 
