--- a/.gitignore
+++ b/.gitignore
@@ -124,3 +124,5 @@ __pycache__/
 .env
 app/Ledger_Logistic/Blockchain/Spedizione/dati_spedizioni.json
 
+ignition/deployments/chain-1338/Spedizione_abi.json
+ignition/deployments/chain-1338/Spedizione_address.json
